<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>difc_mechanism</name>
  <version>0.0.1</version>
  <description>
    The utilities and cryptography interface for DIFC on ROS2
  </description>
  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>
  <license>NULL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>openabe</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
